log
Fri, Mar 28, 2025  3:39:25 PM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Fri, Mar 28, 2025  3:42:27 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
21b4bda
Fri, Mar 28, 2025  3:44:28 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
919f983
Fri, Mar 28, 2025  3:45:43 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
94d4437
Fri, Mar 28, 2025  3:48:21 PM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
16b927e
Fri, Mar 28, 2025  3:51:31 PM: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:72:5: error: expected expression before '}' token
     }
     ^
list.c:72:5: error: 'return' with a value, in function returning void [-Werror]
list.c:67:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
04d0fcd
Fri, Mar 28, 2025  3:51:54 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
4aa2f31
Fri, Mar 28, 2025  3:57:30 PM: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  11|1
total_score: 55/70
860e19f
Fri, Mar 28, 2025  4:03:05 PM: 
 list.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
83b443d
